# vecBox-core

./: Cargo.toml
.github/workflows/: test.yml
src/: download.rs  lib.rs  utils.rs
src/models/: mod.rs  qwen3.rs  qwen3_vl.rs
tests/: image_embedding.rs  text_embedding.rs
tests/common/: mod.rs
