[package]
name = "vecbox-core"
version = "0.1.1"
edition = "2024"

[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]

[dependencies]
anyhow = "1"

image = { version = "0.25.2" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

unicode_categories = "0.1.1"
base64 = "0.22.1"

candle-nn = { version = "0.9.2", default-features = false }
candle-core = { version = "0.9.2", default-features = false }

intel-mkl-src = { version = "0.8.1", optional = true }
accelerate-src = { version = "0.3.2", optional = true }

safetensors = "0.4"

tokenizers = "0.22.2"

hf-hub = "0.5.0"

tracing = "0.1.44"